#update
added automatism to preload and cache templates
added automatism to repeat load components
added classes to transform repeated content from POJOs
removed JsonTreeMapper and JsonTreeRoot
refactored JsonMapper to Builder construction
added license comments
increased version to 3.0.0